apps/postgres/pgadmin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: psql
  labels:
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/part-of: homelab
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pgadmin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pgadmin
        app.kubernetes.io/part-of: homelab
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:9.12
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 5
          resources:
            requests:
              cpu: 200m
              memory: 100Mi
            limits:
              cpu: 800m
              memory: 800Mi
          volumeMounts:
            - name: state
              mountPath: /var/lib/pgadmin
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: state
          persistentVolumeClaim:
            claimName: pgadmin-pvc
        - name: tmp
          emptyDir:
            medium: Memory
            sizeLimit: 128Mi
