apps/postgres/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-svc
  namespace: psql
  labels:
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/part-of: homelab
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: pgadmin
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
      nodePort: 30861
