apps/postgres/postgres-service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-headless
  namespace: psql
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: homelab
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
