apps/postgres/postgres-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-np
  namespace: psql
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/part-of: homelab
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
      nodePort: 32543
